k8s/network-policies/00-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: otel-demo
spec:
  podSelector: {}    
  policyTypes:
    - Ingress
